# go-geos

./: .gitignore  CMakeLists.txt  README.md  adapt.go  algo.go  coordseq.go  coordseq_test.go  geom.go  geom_test.go  geos.go  go.mod  go.sum  io.go  io_test.go
